--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "Mr-Malik",
+    "name": "ABHISHEK-SER",
     "version": "0.0.1",
     "description": "Customizable WhatsApp Bot",
     "main": "index.js",
@@ -20,18 +20,18 @@
         "js-whatsapp",
         "whatsapp",
         "wa-bot",
-        "Mr-Malik",
+        "ABHISHEK-SER",
         "multi-device",
         "MD",
         "baileys-md"
     ],
-    "homepage": "https://github.com/nasrullahmalik/mr-malik-",
+    "homepage": "https://github.com/AbhishekSuresh2/ABHISHEK-SER",
     "author": {
-        "name": "MrMalik"
+        "name": "ABHISHEK SURESH"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/nasrullahmalik/mr-malik-.git"
+        "url": "git+https://github.com/AbhishekSuresh2/ABHISHEK-SER.git"
     },
     "bugs": {
         "url": "https://github.com/AbhishekSuresh2/ABHISHEK-SER/issues"
@@ -40,11 +40,12 @@
     "dependencies": {
         "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@^6.0.1",
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@bochilteam/scraper": "^3.0.0",
+        "@bochilteam/scraper": "^4.2.4",
         "awesome-phonenumber": "^3.4.0",
         "acrcloud": "^1.4.0",
         "@shineiichijo/marika": "^2.0.6",
-        "axios": "^0.24.0",
+        "axios": "^1.6.1",
+        "openai": "4.16.1",
         "cfonts": "^3.1.1",
         "chalk": "^5.1.0",
         "cheerio": "^1.0.0-rc.12",
@@ -83,14 +84,14 @@
         "translate-google-api": "^1.0.4",
         "xfarr-api": "^1.0.3",
         "hxz-api": "^1.0.1",
-        "yt-search": "^2.10.3", 
+        "yt-search": "^2.10.4", 
         "hispamemes": "^1.0.7",
         "didyoumean": "^1.2.2",
         "fg-ig": "^0.0.2",
         "api-dylux": "^1.2.8",
         "@vitalets/google-translate-api": "^8.0.0",
         "yargs": "^17.6.0",
-        "ytdl-core": "^4.11.2",
+        "ytdl-core": "^4.11.5",
          "wa-sticker-formatter": "^4.3.2"
        
     }
