--- a/package.json
+++ b/package.json
@@ -1,108 +1,97 @@
 {
-    "name": "x-gen",
-    "version": "1.0.1",
-    "description": "X-GEN-MD, A WhatsApp userbot with cool features",
-    "main": "index.js",
-    "type": "module",
-    "directories": {
-        "lib": "lib",
-        "src": "src",
-        "plugins": "plugins"
-    },
-    "scripts": {
-        "start": "node index.js",
-        "test": "node test.js",
-        "test2": "nodemon index.js"
-    },
-    "keywords": [
-        "termux-whatsapp-bot",
-        "whatsapp-bot",
-        "whatsapp",
-        "js-whatsapp",
-        "whatsapp",
-        "Games-wabot",
-        "wabot-aq",
-        "multi-device",
-        "MD",
-        "baileys-md"
-    ],
-    "homepage": "https://github.com/X-S-L-A-S-H-E-R/X-GEN-MD",
-    "author": {
-        "name": "X-S-L-A-S-H-E-R"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/X-S-L-A-S-H-E-R/X-GEN-MD.git"
-    },
-    "bugs": {
-        "url": "https://github.com/X-S-L-A-S-H-E-R/X-GEN-MD/issues"
-    },
-    "license": "GPL-3.0-or-later",
-    "dependencies": {
-        "@adiwajshing/baileys": "npm:@jcteh8885/baileys@1.0.6",
-        "@adiwajshing/keyed-db": "^0.2.4",
-        "@bochilteam/scraper": "^3.0.0",
-        "@ibaraki-douji/pixivts": "^2.4.1",
-        "@vitalets/google-translate-api": "^8.0.0",
-        "acrcloud": "^1.4.0",
-        "awesome-phonenumber": "^2.68.0",
-        "axios": "^1.3.4",
-        "brainly-scraper-v2": "^2.0.9",
-        "cfonts": "^2.10.0",
-        "chalk": "^5.0.0",
-        "cheerio": "^1.0.0-rc.10",
-        "colors": "^1.4.0",
-        "deepai": "^1.0.21",
-        "dhn-api": "^1.1.3",
-        "dotenv": "^16.3.1",
-        "emoji-api": "^3.0.1",
-        "express": "^4.17.3",
-        "fb-downloader-scrapper": "^1.0.1",
-        "file-type": "^18.0.0",
-        "fluent-ffmpeg": "^2.1.2",
-        "form-data": "^4.0.0",
-        "formdata-node": "^5.0.0",
-        "google-play-scraper": "^8.1.0",
-        "googleapis": "^111.0.0",
-        "got": "^12.5.3",
-        "https": "^1.0.0",
-        "human-readable": "^0.2.1",
-        "hxz-api": "^1.0.1",
-        "instagram-url-direct": "^1.0.12",
-        "jimp": "^0.16.1",
-        "jsbarcode": "^3.11.5",
-        "jsdom": "^19.0.0",
-        "knights-canvas": "^1.3.7-a",
-        "lodash": "^4.17.21",
-        "lowdb": "^3.0.0",
-        "mime-types": "^2.1.34",
-        "moment-timezone": "^0.5.34",
-        "mongoose": "^6.4.3",
-        "node-fetch": "^3.2.10",
-        "node-gtts": "^2.0.2",
-        "node-os-utils": "^1.3.6",
-        "node-webpmux": "^3.1.1",
-        "ocr-space-api-wrapper": "^2.1.1",
-        "openai": "^3.2.1",
-        "pdfkit": "^0.13.0",
-        "perf_hooks": "^0.0.1",
-        "pino": "^7.8.0",
-        "qrcode": "^1.5.0",
-        "qrcode-terminal": "^0.12.0",
-        "readline": "^1.3.0",
-        "remove.bg": "^1.3.0",
-        "similarity": "^1.2.1",
-        "socket.io": "^4.4.1",
-        "syntax-error": "^1.4.0",
-        "terminal-image": "^2.0.0",
-        "url-regex-safe": "^3.0.0",
-        "wa-sticker-formatter": "^4.3.2",
-        "ws": "^8.11.0",
-        "xfarr-api": "^3.0.1",
-        "xmldom": "^0.6.0",
-        "yargs": "^17.7.1",
-        "yt-search": "^2.10.4",
-        "ytdl-core": "^4.11.3",
-        "zs-extract": "^1.4.1"
-    }
+  "name": "TheMystic-Bot-MD",
+  "version": "1.0.0",
+  "description": "Subs. al canal de YT The Shadow Borkers - TEAM",
+  "main": "index.js",
+  "type": "module",
+  "directories": {
+    "lib": "lib",
+    "src": "src",
+    "plugins": "plugins"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js",
+    "test2": "nodemon index.js",
+    "eslint": "eslint .",
+    "eslintfix": "eslint --fix ."
+  },
+  "homepage": "https://github.com/BrunoSobrino/TheMystic-Bot-MD",
+  "author": {
+    "name": "BrunoSobrino"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BrunoSobrino/TheMystic-Bot-MD.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BrunoSobrino/TheMystic-Bot-MD/issues"
+  },
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "@adiwajshing/keyed-db": "^0.2.4",
+    "@bochilteam/scraper": "^4.2.4",
+    "@brandond/findthelyrics": "^2.0.5",
+    "@green-code/music-track-data": "^2.0.3",
+    "@sasmeee/igdl": "npm:@sasmeee/igdl",
+    "@shineiichijo/marika": "^2.0.6",
+    "@vitalets/google-translate-api": "^8.0.0",
+    "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
+    "@xct007/frieren-scraper": "github:xct007/frieren-scraper",
+    "acrcloud": "^1.4.0",
+    "api-dylux": "^1.6.2",
+    "aptoide-scraper": "^1.0.1",
+    "awesome-phonenumber": "^2.68.0",
+    "axios": "^1.1.3",
+    "body-parser": "^1.20.2",
+    "cfonts": "^2.10.0",
+    "chalk": "^5.0.0",
+    "cheerio": "^1.0.0-rc.10",
+    "colors": "1.4.0",
+    "express": "^4.17.3",
+    "fb-downloader-scrapper": "^1.0.1",
+    "file-type": "^17.1.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "formdata-node": "^4.3.2",
+    "fs": "^0.0.1-security",
+    "google-it": "^1.6.3",
+    "google-play-scraper": "^10.0.0",
+    "hispamemes": "^1.0.7",
+    "human-readable": "^0.2.1",
+    "imagemaker.js": "^2.0.4",
+    "instagram-url-direct": "^1.0.13",
+    "jsdom": "^19.0.0",
+    "link-preview-js": "^3.0.0",
+    "lodash": "^4.17.21",
+    "lowdb": "^3.0.0",
+    "md5": "^2.3.0",
+    "megajs": "^1.1.3",
+    "moment-timezone": "^0.5.34",
+    "mongoose": "^6.3.3",
+    "node-fetch": "^3.2.0",
+    "node-gtts": "^2.0.2",
+    "node-id3": "^0.2.6",
+    "node-webpmux": "^3.1.1",
+    "openai": "^3.3.0",
+    "pdfkit": "^0.13.0",
+    "perf_hooks": "^0.0.1",
+    "pino": "^7.8.0",
+    "pino-pretty": "^7.5.1",
+    "qrcode": "^1.5.0",
+    "qrcode-terminal": "^0.12.0",
+    "readline": "^1.3.0",
+    "similarity": "^1.2.1",
+    "socket.io": "^4.4.1",
+    "syntax-error": "^1.4.0",
+    "terminal-image": "^2.0.0",
+    "url-regex-safe": "^3.0.0",
+    "wa-sticker-formatter": "^4.3.2",
+    "yargs": "^17.3.1",
+    "yt-search": "^2.10.3",
+    "ytdl-core": "github:khlevon/node-ytdl-core#v4.11.4-patch.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-config-google": "^0.14.0"
+  }
 }
