--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{ 
-    "name": "ABHISHEK-SER",
-    "version": "0.0.1",
-    "description": "Customizable WhatsApp Bot",
+{
+    "name": "x-gen",
+    "version": "1.0.1",
+    "description": "X-GEN-MD, A WhatsApp userbot with cool features",
     "main": "index.js",
     "type": "module",
     "directories": {
@@ -11,7 +11,8 @@
     },
     "scripts": {
         "start": "node index.js",
-        "test": "node test.js"
+        "test": "node test.js",
+        "test2": "nodemon index.js"
     },
     "keywords": [
         "termux-whatsapp-bot",
@@ -19,80 +20,89 @@
         "whatsapp",
         "js-whatsapp",
         "whatsapp",
-        "wa-bot",
-        "ABHISHEK-SER",
+        "Games-wabot",
+        "wabot-aq",
         "multi-device",
         "MD",
         "baileys-md"
     ],
-    "homepage": "https://github.com/AbhishekSuresh2/ABHISHEK-SER",
+    "homepage": "https://github.com/X-S-L-A-S-H-E-R/X-GEN-MD",
     "author": {
-        "name": "ABHISHEK SURESH"
+        "name": "X-S-L-A-S-H-E-R"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/AbhishekSuresh2/ABHISHEK-SER.git"
+        "url": "git+https://github.com/X-S-L-A-S-H-E-R/X-GEN-MD.git"
     },
     "bugs": {
-        "url": "https://github.com/AbhishekSuresh2/ABHISHEK-SER/issues"
+        "url": "https://github.com/X-S-L-A-S-H-E-R/X-GEN-MD/issues"
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@^6.0.1",
+        "@adiwajshing/baileys": "npm:@jcteh8885/baileys@1.0.6",
         "@adiwajshing/keyed-db": "^0.2.4",
         "@bochilteam/scraper": "^3.0.0",
-        "awesome-phonenumber": "^3.4.0",
+        "@ibaraki-douji/pixivts": "^2.4.1",
+        "@vitalets/google-translate-api": "^8.0.0",
         "acrcloud": "^1.4.0",
-        "@shineiichijo/marika": "^2.0.6",
-        "axios": "^0.24.0",
-        "cfonts": "^3.1.1",
-        "chalk": "^5.1.0",
-        "cheerio": "^1.0.0-rc.12",
-        "colors": "1.4.0",
-        "express": "^4.18.1",
+        "awesome-phonenumber": "^2.68.0",
+        "axios": "^1.3.4",
+        "brainly-scraper-v2": "^2.0.9",
+        "cfonts": "^2.10.0",
+        "chalk": "^5.0.0",
+        "cheerio": "^1.0.0-rc.10",
+        "colors": "^1.4.0",
+        "deepai": "^1.0.21",
+        "dhn-api": "^1.1.3",
+        "dotenv": "^16.3.1",
+        "emoji-api": "^3.0.1",
+        "express": "^4.17.3",
         "fb-downloader-scrapper": "^1.0.1",
         "file-type": "^18.0.0",
         "fluent-ffmpeg": "^2.1.2",
+        "form-data": "^4.0.0",
         "formdata-node": "^5.0.0",
+        "google-play-scraper": "^8.1.0",
+        "googleapis": "^111.0.0",
+        "got": "^12.5.3",
+        "https": "^1.0.0",
         "human-readable": "^0.2.1",
+        "hxz-api": "^1.0.1",
         "instagram-url-direct": "^1.0.12",
-        "jsdom": "^20.0.1",
+        "jimp": "^0.16.1",
+        "jsbarcode": "^3.11.5",
+        "jsdom": "^19.0.0",
         "knights-canvas": "^1.3.7-a",
-        "link-preview-js": "^3.0.0",
         "lodash": "^4.17.21",
         "lowdb": "^3.0.0",
-        "moment-timezone": "^0.5.37",
-        "mongoose": "^6.6.5",
+        "mime-types": "^2.1.34",
+        "moment-timezone": "^0.5.34",
+        "mongoose": "^6.4.3",
         "node-fetch": "^3.2.10",
         "node-gtts": "^2.0.2",
-        "node-webpmux": "^3.1.3",
-        "perf_hooks": "^0.0.1",
-        "pino": "^8.6.1",
+        "node-os-utils": "^1.3.6",
+        "node-webpmux": "^3.1.1",
+        "ocr-space-api-wrapper": "^2.1.1",
+        "openai": "^3.2.1",
         "pdfkit": "^0.13.0",
-        "pino-pretty": "^9.1.1",
-        "openai": "^3.3.0",
-        "qrcode": "^1.5.1",
+        "perf_hooks": "^0.0.1",
+        "pino": "^7.8.0",
+        "qrcode": "^1.5.0",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
+        "remove.bg": "^1.3.0",
         "similarity": "^1.2.1",
-        "g-i-s": "^2.1.6",
-        "socket.io": "^4.5.2",
+        "socket.io": "^4.4.1",
         "syntax-error": "^1.4.0",
         "terminal-image": "^2.0.0",
         "url-regex-safe": "^3.0.0",
-        "emoji-api": "^2.0.1",
-        "translate-google-api": "^1.0.4",
-        "xfarr-api": "^1.0.3",
-        "hxz-api": "^1.0.1",
-        "yt-search": "^2.10.3", 
-        "hispamemes": "^1.0.7",
-        "didyoumean": "^1.2.2",
-        "fg-ig": "^0.0.2",
-        "api-dylux": "^1.2.8",
-        "@vitalets/google-translate-api": "^8.0.0",
-        "yargs": "^17.6.0",
-        "ytdl-core": "^4.11.2",
-         "wa-sticker-formatter": "^4.3.2"
-       
+        "wa-sticker-formatter": "^4.3.2",
+        "ws": "^8.11.0",
+        "xfarr-api": "^3.0.1",
+        "xmldom": "^0.6.0",
+        "yargs": "^17.7.1",
+        "yt-search": "^2.10.4",
+        "ytdl-core": "^4.11.3",
+        "zs-extract": "^1.4.1"
     }
 }
