--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitalets/google-translate-api": "^8.0.0",
     "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
     "@xct007/frieren-scraper": "github:xct007/frieren-scraper",
+    "knights-canvas": "^1.3.7-a",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.6.2",
     "aptoide-scraper": "^1.0.1",
