--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-  "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@^6.0.1",
+  "@adiwajshing/baileys": "npm:baileys-md@5.0.5",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^4.2.4",
     "@brandond/findthelyrics": "^2.0.5",
@@ -37,7 +37,7 @@
     "@sasmeee/igdl": "npm:@sasmeee/igdl",
     "@shineiichijo/marika": "^2.0.6",
     "@vitalets/google-translate-api": "^8.0.0",
-    "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
+    "@whiskeysockets/baileys": "npm:baileys-md@5.0.5",
     "@xct007/frieren-scraper": "github:xct007/frieren-scraper",
     "knights-canvas": "^1.3.7-a",
     "acrcloud": "^1.4.0",
