--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "aptoide-scraper": "^1.0.1",
     "awesome-phonenumber": "^2.68.0",
     "axios": "^1.1.3",
+    "didyoumean": "^1.2.2",
     "body-parser": "^1.20.2",
     "cfonts": "^2.10.0",
     "chalk": "^5.0.0",
