--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "TheMystic-Bot-MD",
+  "name": "Mr-Malik-WA-Bot",
   "version": "1.0.0",
   "description": "Subs. al canal de YT The Shadow Borkers - TEAM",
   "main": "index.js",
-  "type": "cjs",
+  "type": "mjs",
   "directories": {
     "lib": "lib",
     "src": "src",
