--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-  "@adiwajshing/baileys": "npm:@whiskeysockets/baileys",
+  "@adiwajshing/baileys": "npm:baileys-md@5.0.5",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^4.2.4",
     "@brandond/findthelyrics": "^2.0.5",
