--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@sasmeee/igdl": "npm:@sasmeee/igdl",
     "@shineiichijo/marika": "^2.0.6",
     "@vitalets/google-translate-api": "^8.0.0",
-    "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
+    "@whiskeysockets/baileys": "npm:baileys-md@5.0.5",
     "@xct007/frieren-scraper": "github:xct007/frieren-scraper",
     "knights-canvas": "^1.3.7-a",
     "acrcloud": "^1.4.0",
